# monocr-onnx

./: .gitignore  LICENSE  README.md  flake.nix  publishing_setup_plan.md
.github/workflows/: release.yml  test.yml
docs/: publishing.md
examples/: README.md
examples/go/: go.mod  go.sum
examples/go/pdf/: main.go
examples/go/simple/: main.go
examples/js/: README.md  accuracy-example.js  batch-example.js  batch.js  image-example.js  package-lock.json  package.json  pdf-example.js  pnpm-lock.yaml  pnpm-workspace.yaml  simple.js  with-accuracy.js
examples/python/: pyproject.toml  simple.py
go/: README.md  go.mod  go.sum  monocr.go
go/cmd/monocr/: main.go
go/examples/pdf/: main.go
go/examples/simple/: main.go
go/pkg/predictor/: onnx.go
go/pkg/segmenter/: segmenter.go
js/: PUBLISH.md  PUBLISHING.md  README.md  download.js  example.js  index.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test-download.js
js/examples/: batch.js  simple.js  with-accuracy.js
js/src/: index.js  model-manager.js  monocr.js  segmenter.js  utils.js
python/: README.md  pyproject.toml
python/examples/: accuracy.py  pdf.py  simple.py
python/monocr_onnx/: __init__.py  charset.txt  cli.py  download.py  inference.py  model_manager.py  ocr.py  predictor.py  segmenter.py  utils.py
rust/: Cargo.toml
rust/src/: lib.rs  main.rs  model_manager.rs  monocr.rs  segmenter.rs  utils.rs
scripts/: download_models.sh
