[package]
name = "monocr-onnx"
version = "0.1.0"
edition = "2021"
description = "Universal MonOCR package with ONNX bindings for Rust"
license = "MIT"
authors = ["Janakh"]

[[bin]]
name = "monocr"
path = "src/main.rs"

[lib]
name = "monocr_onnx"
path = "src/lib.rs"

[dependencies]
ort = "2.0.0-rc.11"
image = "0.24"
ndarray = "0.17"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }
indicatif = "0.17"
dirs = "5.0"
tempfile = "3.8"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
